kubernetes/service.yaml
apiVersion: v1
kind: Service

metadata:
  name: flask-service

spec:
  selector:
    app: flask-devops

  ports:
  - protocol: TCP
    port: 80
    targetPort: 80

  type: NodePort
